Lecture 2 - Wizard: First working version.

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -16,6 +16,9 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+        <activity android:name=".EnterAddressActivity" />
+        <activity android:name=".EnterBirthActivity" />
+        <activity android:name=".DisplaySummaryActivity"></activity>
     </application>
 
 </manifest>
